further tester changes

--- a/tester.ipynb
+++ b/tester.ipynb
@@ -19,6 +19,14 @@
     "\n",
     "print(new_code.cool_function(\"really, really awesome\"))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa1da9c0",
+   "metadata": {},
+   "source": [
+    "I am making further changes to the tester on the tester branch now"
+   ]
   }
  ],
  "metadata": {
